--- a/css.css
+++ b/css.css
@@ -9,10 +9,31 @@ html {
 body {
   margin: 0;
   min-height: 100%;
-  background: #071a20;
+  background:black;
   font-size: 28px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Orbitron', sans-serif;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: white; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #35393b;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
 
 @media screen and (max-width: 700px) {
   .row {
@@ -29,13 +50,13 @@ body {
 
 #navbar {
   overflow: hidden;
-  background-color: #071a20;
+  background-color:black;/*#071a20;*/
 }
 
 #navbar a {
   float: left;
   display: block;
-  color: #B66B5B;
+  color: white;
   text-align: center;
   padding: 17px 25px;
   text-decoration: none;
@@ -48,7 +69,7 @@ body {
 }
 
 #navbar a.active {
-  background-color: #071a20;
+  background-color:black;
   color: white;
 }
 
@@ -58,7 +79,7 @@ img {
 
 .content {          
   padding: 0px;
-  background-color: #071a20;
+  background-color: black;
 }
 
 .sticky {
@@ -80,17 +101,6 @@ img {
    height: auto;
 }
 
-.cntrdtxt {
-  position:  absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-family: 'Lobster', cursive;
-  font-size: 70px;
-  color: white;
-  border: 3px solid white;
-  padding: 20px;
-}
 
 footer {
    position: sticky;
@@ -98,7 +108,7 @@ footer {
    bottom:0px;
    height:80px;
    width:100%;
-   background: #071a20;
+   background: black;
    color: white;
 }
 
@@ -121,160 +131,94 @@ p {
 #ftr {
   text-align: left;
   padding: 17px 25px;
-  color: #B66B5B;
+  color: white;
 }
 
-#aboutme {
-  color: White;
-  font-size: 30px;
-  text-align: center;
-}
-
-#projects {
-  margin-top: 20px;
-  color: White;
-  font-size: 30px;
-  text-align: center;
-}
-
-@media screen and (min-width: 400px) and (max-width: 600px) {
-  #projects{
-    margin-top: 300px;
-  }
-}
-
-@media screen and (min-width: 710px) {
-  #projects{
-    margin-top: 150px;
-  }
-  
-  div.projects-respo1{
-    width: 300%;
-  }
-}
-
-div.projects-respo1{
-	margin-top: 30px;
- 	padding: 0 3px;
-  float: left;
-  width: 24.99999%;
-  float:left;
-  width:100%;
-}
-
-div.projects-img1 img {
-  width: 100%;
-  height: auto;
-}
-
-@media only screen and (max-width: 700px) {
-  div.projects-respo1 {
-    width: 49.99999%;
-    margin: 6px 0;
-  }
-}
-
-@media only screen and (min-width:300px) and (max-width: 900px) {
-  p#story{
-    font-size: 15px;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  div.projects-respo1 {
-    width: 100%;
-  }
-}
-
-div.projects-respo{
-	margin-top: 30px;
- 	padding: 0 3px;
-  float: left;
-  width: 24.99999%;
-}
-
-div.projects-img img {
-  width: 100%;
-  height: auto;
-}
-
-@media only screen and (max-width: 700px) {
-  div.projects-respo {
-    width: 49.99999%;
-    margin: 6px 0;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  div.projects-respo {
-    width: 100%;
-  }
-}
-
-#qna {
+.titles{
   color: white;
   font-size: 30px;
   text-align: center;
 }
 
-.qaa {
-  padding: 10px;
-  background-color: #071a20;
-}
 
-/* Style the buttons that are used to open and close the accordion panel */
 .accordion {
-  background-color: #071a20;
-  color: white;
   cursor: pointer;
+  background-color:black;
   padding: 18px;
   width: 100%;
-  text-align: center;
-  border: none;
+  border: 1px solid black;
+  color:white;
+  text-align: left;
   outline: none;
-  transition: 0.4s;
   font-size: 20px;
+  transition: 0.4s;
+  text-align: center;
+  font-family: 'Orbitron', sans-serif;
 }
 
-/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active, .accordion:hover {
+.categories{
+  /*color: #35393b;
+  border: 3px solid #35393b;*/
+  color: black;
+  border: 3px solid white;
+  background: white;
+  border-radius: 10px;
+  padding: 18px;
+  width: 10%;
+  margin:auto;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  text-align: left;
+  outline: none;
+  font-size: 25px;
+  text-align: center;
+  font-family: 'Orbitron', sans-serif;
+}
+
+.accordion:after {
+  content: '\002B';
+  color: #35393b;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+  color:white;
+}
+
+.active:after {
+  content: "\2212";
+  color:white;
+}
+
+.active, .accordion:hover, #acco1:hover{
   background-color: #35393b;
 }
 
-/* Style the accordion panel. Note: hidden by default */
 .panel {
   padding: 0 18px;
-  background-color: #071a20;
-  max-height: 0;
+  display: none;
+  background-color: black;
   overflow: hidden;
-  transition: max-height 0.2s ease-out;
 }
 
-.responsive {
-  max-width: 100%;
-  height: auto;
+.center {
+  margin: auto;
+  width: 60%;
+  border: 3px solid white;
+  padding: 5px;
+  text-align: center;
 }
 
-/* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px){
-  div.column {
-    width: 100%;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-  }
+.pfaq{
+  width:60%;
+  margin:auto;
+  padding:5px;
 }
+
+
 
 i {
-  color: #B66B5B;
+  color:white;
   margin: 3px;
-}
-
-.column {
-  float: left;
-  width: 50%;
-  padding: 10px;
-  height: 600px; /* Should be removed. Only for demonstration */
 }
 
 
@@ -284,9 +228,3 @@ i {
   clear: both;
 }
 
-
-
-#story {
-  max-width: 100%;
-  height: auto;
-  }
